--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,18 @@
                 android:resource="@xml/widget_provider_info" />
         </receiver>
 
-        <receiver android:name="AlarmBroadcastReceiver" android:enabled="false" >
-            <intent-filter>
+        <receiver android:name="AlarmBroadcastReceiver" >
+            <!--<intent-filter>
                 <action android:name="android.intent.ACTION_TIMEZONE_CHANGED" />
                 <action android:name="android.intent.ACTION_TIME" />
-            </intent-filter>
+            </intent-filter>-->
         </receiver>
+
+    <!--    <service android:name="RingtonePlayingService"
+            android:enabled="true">
+        </service>
+-->
+
 
     </application>
 
